# File-explorer

./: .goosyignore  ARCHITECTURE.md  Cargo.toml  GEMINI.md  README.md  accessibility.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: README.md
backend/src/: file_entry.rs  main.rs
frontend/: vite.config.js
src/: file_entry.rs  fs_utils.rs  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
